# AKMO

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
AKMO/: AKMO.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
